http-test/http-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-client
  namespace: http-test
spec:
  containers:
  - name: curl
    image: curlimages/curl:latest
    command: ["sleep", "3600"]
