http-test/http-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  namespace: http-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
