http-test/http-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
  namespace: http-test
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
